--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "357 Ltd.",
+  "name": "357ltd",
   "version": "1.0.0",
-  "description": "# Lessons",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "build": "cd backend && npm install  && cd ../frontend && npm install && npm run build",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maksymnoon/357.git"
+    "url": "git+https://github.com/maksymnoon/357ltd.git"
   },
   "author": "",
   "license": "ISC",
